replace deprecated method in CredentialSubjectClaimExtractor.java
  - Replaced .get() + loop over RdfDataset with .provide(RdfQuadConsumer lambda)
  - Model is declared before the lambda (captured as effectively final)
  - Object type detection uses the new API convention: language != null || direction != null → lang string, datatype != null → typed literal, else → resource
  - RdfQuadConsumer.isBlank() replaces .isBlankNode() calls
  - Removed the now-obsolete var comment about deprecated imports